# libmzdb

./: COPYING.md  LICENSE.CECILL-C  Makefile  README.md  models.h  mzdb.c  mzdb.h  queries.c  queries.h  sqlite.c  tables.c  test.h  util.h  xml.h
lib/xmlbare/: CMakeLists.txt  parser.c
src/: CMakeLists.txt  asprintf.c  asprintf.h  iterator.c  iterator.h  log.c  log.h  main.c  models.h  mzdb.c  mzdb.h  queries.c  queries.h  sqlite.c  sqlite.h  tables.c  tables.h  test.c  test.h  util.c  util.h  xml.c  xml.h
src/lib/sqlite/: CMakeLists.txt
src/lib/xmlbare/: parser.h
